1) adjust layout issue 2) fix player position init bug

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -168,6 +168,7 @@ select::-ms-expand {
 		.ti-input[class] {
 			border: none;
 			min-height: 36px;
+			padding-top: 5px;
 		}
 		.ti-tag,
 		.ti-tag-input[class],
